--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .ipynb_checkpoints/*
 .vscode/*
 __pycache__/*
+tree_inference/__pycache__/*
 test.py
-test_results/*
+test_result/*
 workbench.ipynb
